--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: frontend
-          environment_name: Frontenv-env
+          environment_name: Frontend-env
           existing_bucket_name: elasticbeanstalk-us-west-1-223741390366
           region: us-west-1
           version_label: ${{ github.sha }}
